--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/yong8048/KDT4-M3#readme",
   "devDependencies": {
+    "parcel-bundler": "^1.12.5",
     "sass": "^1.57.1"
   },
   "dependencies": {
